--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
             <div class="row gy-4">
               <div class="col-md-6">
                 <div class="info-box">
-                  <i class="bi bi-geo-alt"></i>
+                  <i class="bi bi-people"></i>
                   <h3>Address</h3>
                   <p>A108 Adam Street,<br>New York, NY 535022</p>
                 </div>
